--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	<context-param> 
+    <description>Location to store uploaded file</description> 
+    <param-name>upload</param-name> 
+    <param-value>upload</param-value> 
+	</context-param>
 	<filter>
 		<filter-name>CharacterFilter</filter-name>
 		<filter-class>com.jt.sd.controller.CharacterFilter</filter-class>
@@ -35,12 +40,20 @@
 		<servlet-name>userServlet</servlet-name>
 		<url-pattern>/user/*</url-pattern>
 	</servlet-mapping>
-		<servlet>
+	<servlet>
 		<servlet-name>dreamServlet</servlet-name>
 		<servlet-class>com.jt.sd.controller.DreamController</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>dreamServlet</servlet-name>
 		<url-pattern>/dream/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>loginServlet</servlet-name>
+		<servlet-class>com.jt.sd.controller.LoginController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>loginServlet</servlet-name>
+		<url-pattern>/login/*</url-pattern>
 	</servlet-mapping>
 </web-app>
